<resources>
    <string name="app_name">Inventory App</string>

    <!-- editor activity -->
    <string name="item_name">Item name</string>
    <string name="item_quantity">Quantity</string>

    <string name="button_increase">Increase</string>
    <string name="button_decrease">Decrease</string>

    <string name="item_price">Price</string>

    <string name="upload_image">Upload image</string>

    <string name="item_supplier">Supplier</string>
    <string name="item_supplier_email">Supplier email</string>

    <string name="order_button">order</string>

    <!-- main activity -->
    <string name="empty_text_title">It is a bit lonely here</string>
    <string name="empty_text_subtitle">Get started by adding an item</string>
    <string name="delete_all_message">Delete all data</string>

    <!-- list -->
    <string name="sell_button">Sell</string>
    <string name="buy_button">Buy</string>

    <!-- menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_items">Delete all items</string>

    <string name="title_add_item">Add item</string>
    <string name="title_edit_item">Edit item</string>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Delete item?</string>

    <string name="item_deleted">Item deleted</string>
    <string name="no_item_deleted">Item could not be deleted</string>

    <string name="insert_item_successful">Item inserted</string>
    <string name="insert_item_failed">Could not insert item</string>

    <string name="item_update_successful">Item updated</string>
    <string name="item_update_failed">Could not update item</string>

    <string name="unsaved_changes_message">There are unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="give_all_the_information">Please fill all the blanks</string>
    <string name="quantity">Quantity =</string>

</resources>
