<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Item name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/item_name"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/item_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Quantity -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/item_quantity"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/increase_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/button_increase" />

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/button_decrease" />
        </LinearLayout>

        <EditText
            android:id="@+id/quantity_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Item price -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/item_price"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/item_price_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Supplier -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/item_supplier"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/supplier_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Supplier email -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/item_supplier_email"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/supplier_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <!-- Image -->
        <TextView
            android:id="@+id/item_image_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upload_image"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:src="@drawable/no_image" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_button" />

    </LinearLayout>

</ScrollView>